# Function_Plotter

./: README.md
FuctionPlot/: FuctionPlot.pro  functiongenerator.cpp  functiongenerator.h  functionparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TestFile/: CMakeLists.txt  main.cpp
TestFile/Catch_tests/: CMakeLists.txt  Tester.cpp
TestFile/Function_lib/: CMakeLists.txt  functiongenerator.cpp  functiongenerator.h
